<resources>
    <string name="app_name">CameraDisabler</string>
    <string name="cameraDisableSwitch">カメラ機能</string>
    <string name="cameraDisable">無効</string>
    <string name="cameraEnable">有効</string>
    <string name="beforeDisable">前回無効化時刻</string>
    <string name="beforeEnable">前回有効化時刻</string>
    <string name="lastStartTime">前回起動時刻</string>
    <string name="nextStartTime">次回起動時刻</string>
    <string name="dateAndTime">1970/01/01 09:00</string>
    <string name="time">00:00</string>
    <string name="settingFileName">setting.txt</string>
    <string name="holidayOnTime">前回ONにした時刻</string>
    <string name="dontDisableCamera">今日はカメラを無効にしない</string>
    <string name="timerNoActivate">まで、タイマーを起動しない</string>
    <string name="timer1">timer 1</string>
    <string name="timer2">timer 2</string>
    <string name="timer3">timer 3</string>
    <string name="oshirase">このアプリは端末の管理者権限（カメラ機能無効）を使用します</string>
</resources>
